# lm-assist

./: .gitignore  Dockerfile  README.md  app.py  docker-compose-model.yml  docker-compose.yml  env.yml  install.sh  params.json  prompts.json  pyproject.toml
api/: app.py  chat_utils.py
api/data/: data_reqs.py
chat/: routes.py
server/: Dockerfile  lmserver_install.sh  ollama.py
src/: chat_utils.py  file_interaction.py  helpers.py  load_config.py  simil_util.py  tools.py  use_model.py
utils/: parsers.py
