[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-model-assist"
version = "0.1.0"
authors = [
    {name = "Kamyar R", email = "notPublicYet@gmail.com"},
]

description = "General assistant app and to form new ideas."
readme = "README.md"
requires-python = ">=3.13"
keywords = ["large language models", "machine learning", "assistant", "probability"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Development Status :: 3 - Alpha",

]
dependencies = [
    "requests",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "torch>=2.7.1",
    "flask>=3.1.1",
]

# dynamic = ["version"]
